k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user105-back-deployment
  namespace: default
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: user105-back
  template:
    metadata:
      labels:
        app: user105-back
    spec:
      containers: # image aws_account_id: 변경사항 확인해보기
      - name: backend-container
        image: 416225317325.dkr.ecr.ap-southeast-2.amazonaws.com/user105-back:latest

        ports:
        - containerPort: 8080

        envFrom: # config와 secret name 확인해보기
        - configMapRef:
            name: user105-back-config
        - secretRef:
            name: user105-back-secret
